# mcp-airflow

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml
src/mcp_airflow/: __init__.py  client.py  config.py  server.py
src/mcp_airflow/tools/: __init__.py  dags.py  health.py  runs.py
tests/: test_tools.py
