[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-airflow"
version = "0.1.0"
description = "MCP server for Apache Airflow REST API"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
mcp-airflow = "mcp_airflow.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_airflow"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
